[gd_scene load_steps=13 format=3 uid="uid://cxtr8h6ubn4od"]

[ext_resource type="Script" path="res://scenes/wrapper/wrapper.gd" id="1_lehf4"]
[ext_resource type="Shader" path="res://resources/wrapper.gdshader" id="2_pki3p"]
[ext_resource type="PackedScene" uid="uid://15b2qs112sby" path="res://scenes/main/main.tscn" id="3_amhr7"]
[ext_resource type="Script" path="res://scenes/wrapper/post_processing.gd" id="3_e24lm"]
[ext_resource type="PackedScene" uid="uid://b1fmw775h5h3g" path="res://scenes/window_resize_borders/window_resize_borders.tscn" id="4_86air"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rmauw"]
frequency = 0.0217
fractal_type = 2
fractal_octaves = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wqthq"]
width = 256
height = 256
noise = SubResource("FastNoiseLite_rmauw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kc3o"]
shader = ExtResource("2_pki3p")
shader_parameter/progress = 0.0
shader_parameter/noise_texture = SubResource("NoiseTexture2D_wqthq")

[sub_resource type="Animation" id="Animation_jhvui"]
resource_name = "close"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:exit_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_ksgam"]
resource_name = "minimize"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.21, 0.6),
"transitions": PackedFloat32Array(-0.5, 1, 2.14355),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.474342, 0.474342), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.024, 0.6),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [6.28319, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.084, 0.26, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(-19.565, 0), Vector2(-100, 50)]
}

[sub_resource type="Animation" id="Animation_mut8j"]
resource_name = "unminimize"
length = 0.8
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 0.353554, -0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.47),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.34, 0.46, 0.54),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-100, 50), Vector2(-19.565, 0), Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eixnn"]
_data = {
"close": SubResource("Animation_jhvui"),
"minimize": SubResource("Animation_ksgam"),
"unminimize": SubResource("Animation_mut8j")
}

[node name="Wrapper" type="Node2D" node_paths=PackedStringArray("post_processing_container", "post_processing_animations")]
script = ExtResource("1_lehf4")
post_processing_container = NodePath("CanvasLayer/PostProcessing")
post_processing_animations = NodePath("CanvasLayer/PostProcessing/AnimationPlayer")
metadata/_disabled_ = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
metadata/_disabled_ = false

[node name="PostProcessing" type="SubViewportContainer" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_8kc3o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.000179291
offset_top = -0.000267029
offset_right = 0.000183105
offset_bottom = -0.000274658
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
pivot_offset = Vector2(60, 40)
stretch = true
script = ExtResource("3_e24lm")
metadata/_disabled_ = false

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/PostProcessing"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
physics_object_picking = true
size = Vector2i(480, 320)
render_target_update_mode = 4
metadata/_disabled_ = false

[node name="Main" parent="CanvasLayer/PostProcessing/SubViewport" instance=ExtResource("3_amhr7")]
metadata/_disabled_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/PostProcessing"]
libraries = {
"": SubResource("AnimationLibrary_eixnn")
}
metadata/_disabled_ = false

[node name="Upscale" type="SubViewportContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
stretch = true
metadata/_disabled_ = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/Upscale"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(480, 320)
render_target_update_mode = 0
metadata/_disabled_ = false

[node name="WindowResizeBorders" parent="CanvasLayer" instance=ExtResource("4_86air")]
metadata/_disabled_ = false

[connection signal="close_request" from="CanvasLayer/PostProcessing/SubViewport/Main" to="." method="_on_main_close_request"]
[connection signal="minimize_request" from="CanvasLayer/PostProcessing/SubViewport/Main" to="." method="_on_main_minimize_request"]
[connection signal="animation_finished" from="CanvasLayer/PostProcessing/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="window_resized" from="CanvasLayer/WindowResizeBorders" to="CanvasLayer/PostProcessing/SubViewport/Main" method="update_size"]
